# mysql-binlog-parser-rust

./: Cargo.toml  Makefile
src/: binlog_file.rs  errors.rs  event.rs  lib.rs
