[package]
name = "mysql-binlog-parser-rust"
version = "0.1.0"
authors = ["chirichidi"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.29"
byteorder = "1"
serde = "1"
serde_derive = "1"
serde_json = "1.0"